@@ -1,7 +1,6 @@
 # This file is part of Tryton.  The COPYRIGHT file at the top level of
 # this repository contains the full copyright notices and license terms.
 from decimal import Decimal
-from functools import total_ordering
 
 from simpleeval import simple_eval
 
@@ -11,33 +10,11 @@ from trytond.model import (
     sequence_ordered)
 from trytond.modules.product import round_price
 from trytond.pool import Pool
-from trytond.tools import decistmt
+from trytond.tools.decimal_ import DecimalNull as Null
+from trytond.tools.decimal_ import decistmt
 from trytond.transaction import Transaction
 
 from .exceptions import FormulaError
-
-
-@total_ordering
-class Null(Decimal):
-    def __eq__(self, other):
-        if isinstance(other, Null) or other is None:
-            return True
-        return False
-
-    def __lt__(self, other):
-        return 0 < other
-
-
-def _return_self(self, *args, **kwargs):
-    return self
-
-
-_OPERATORS = (
-    'add sub mul matmul truediv floordiv mod divmod pow lshift rshift and xor '
-    'or'.split())
-for op in _OPERATORS:
-    setattr(Null, '__%s__' % op, _return_self)
-    setattr(Null, '__r%s__' % op, _return_self)
 
 
 class PriceList(DeactivableMixin, ModelSQL, ModelView):
