@@ -1,3 +1,4 @@
+* Add DecimalNull as tools
 * Add chat backend
 * Transaction.check_warnings is now a directory mapping the key to the warnings
 * Store target of field as relation
